--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="intro">
 				<div class="title">
-					<img src="images/logo.png" width="120" height="120" class="logo" alt="logo">
+					<img src="images/LOGO.png" width="120" height="120" class="logo" alt="logo">
 					<br>
 					<h1 class="pcenter">计算机应用与数据处理</h1>
 					<h2 class="two">主讲教师：王娴卉</h2>
